radio and tv update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,4 +112,35 @@ $size: 50px;
     height: $size;
     width: $size;
   }
+  
+  .ssb-twitter{
+      display:none;
+  }
+  .ssb-douban{
+      display:none;
+  }
+  .ssb-reddit{
+       display:none;
+  }
+  .ssb-weibo{
+       display:none;
+  }
+  .ssb-qq{
+       display:none;
+  }
+  .ssb-wechat{
+       display:none;
+  }
+  .ssb-xing{
+      display:none;
+  }
+  .ssb-odnoklassniki{
+      display:none;
+  }
+  .ssb-vkontakte{
+      display:none;
+  }
+  .ssb-delicious{
+      display:none;
+  }
 }
