--- a/app/views/home/somos.html.erb
+++ b/app/views/home/somos.html.erb
@@ -1,1 +1,59 @@
 <h1>Quienes Somos</h1>
+
+<!-- Team -->
+<section id="team" class="pb-12" style = "margin-top: 8%; color:rgb(34, 102, 102);">
+    <div class="container">
+        <h5 class="section-title h1">Conoce al Dr. Jose Gil Abreu</h5>
+        <div >
+            <!-- Team member -->
+            <div class="col-xs-6 col-sm-12 col-md-6">
+                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                    <div class="mainflip">
+                        <div class="frontside">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <p><div alt="card image"> <%= link_to image_tag "joseGil.jpg" , class:" team_photo"  %></div></p>
+                                    <h4 class="card-title">Dr Jose Gil</h4>
+                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="backside">
+                            <div class="card">
+                                <div class="card-body text-center mt-4">
+
+                                    <p class="card-text">Jose Gil Abreu nacido en la República Dominicana. Curso sus
+                                        estudios básicos en su pais de nacimiento. Recibió su formación universitara
+                                         en su patria que lo vio nacer la Rep. Dominicana como tambien en los Estados Unidos. Ha
+                                        recidido en los EU los últimos quince anos de su vida. Es Psicólogo,
+                                        terapeuta individual, de pareja, familiar, de grupo, educador, profesor universitario, comunicador, conferencista, musico, productor radial y televisivo..</p>
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-twitter"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-skype"></i>
+                                            </a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <i class="fa fa-google"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+</section>
