--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <h1> Articulos de Orientacion Familiar</h1>
 <br>
 
-<div class= "row">
+<div class= "row" style= "color:black">
 <% @posts.each do |post| %>
     <div class = "col sm-6">
     <div class="card " style="width: 18rem; flex:left">
