--- a/app/views/home/mision.html.erb
+++ b/app/views/home/mision.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container" style= "color:black">
 	<div class="row" align="center">
 		<div class ="col-md-12" >
 			<div class="jumbotron">
 			  <h1>Mision</h1>
-			  <p>Orientación familiar una guía para el hogar es un espacio Televisivo y radial con la misión de llegar a todos los hogares a fin de compartir valores familiares, educativos y espirituales con la colaboración de diferentes comunidades con el propósito de que reine la buena convivencia al recibir mensaje conciliador de paz y armonía través de consejeria , orientación y buena guía.</p>
+			  <p>Orientación familiar una guía para el hogar es un espacio Televisivo y radial con la misión de llegar a todos los hogares a fin de compartir valores familiares, educativos y espirituales con la colaboración de la comunidad. Nuestro propósito es el de que reine la buena convivencia al recibir mensaje conciliador de paz y armonía a través de consejeria , orientación y buena guía.</p>
 			  <p><a class="btn btn-primary btn-lg" href="#" role="button"></a>
 			  </p>
 			</div>
