--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,31 +3,18 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Orientacion</title>
-
-    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
-
 <body >
-  
-
- 
-
 <div align= "center">
 <nav class="navbar navbar-expand-lg navbar-light bg-light " >
-
   <a class="navbar-brand" href="#"><%= image_tag "banner_burned.png",  class: "icon" %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon">
-
   </span>
   </button>
-
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent" style = "margin-left: 4%";>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -64,7 +51,7 @@
          <div class="nav-link " href="#"><%= link_to 'Edit profile', edit_user_registration_path %></div>
         <li class="nav-item "> <div class="nav-link " href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete %></div></li>
         <% if current_user.avatar.attached? %>
-        <li class="nav-item "> <%= show_avatar(current_user)  %></li>
+        <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %></li>
         <% else %>
           <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %></li>
         <% end %>
@@ -78,23 +65,16 @@
       </li> 
     </ul>
   </div>
-
 </nav>
-
 </div>
     <div class= "d-flex justify-content-center">
     <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
     </div>
     </div>
-
   </head>
-
   <body>
-
-      
-
-<div align= "center">
+<div align= "center" style= "background:rgb(34, 102, 102) none repeat scroll 0% 0%; color:white;">
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
