--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -14,6 +14,11 @@
       left: 80px;
     }
   </style>
+    <div class= "d-flex justify-content-center">
+    <div class=  "social-share-button">
+    <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+    </div>
+    </div>
 </head>
 <body>
   <div style="position: relative; left: 0; top: 0;">
