--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,29 +71,33 @@
 <div class = "container"   style ="margin-top: 10%" align="center" >
       <h2> Ya somos TV y Radio !</h2>
     <div class="row">
-      
         <h3> Escuchanos en los horarios 8-9:00 am y 8-9:00 pm en la honda radial Esperanza de vida 99.1 FM</h3>
-        <div class="test col-sm-10" >
-         <%= link_to(image_tag("radio_image.jpg" , style:"width:120%;"), home_radio_path)  %>
+        <div class="test col-sm-12" >
+         <%= link_to(image_tag("radio_image.jpg" , style:"width:90%;border-radius:50px; "), home_radio_path)  %>
          </div>
         </div>
     </div>
-    <h2 style = "margin-top: 5%"> Orientacion Familiar TV !</h2>
+    <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
+    <%= link_to(image_tag("youtube-icon" , style:"width:10%;border-radius:10%; height:5%;position:relative "), home_radio_path) %>
     <div class="row"  >
-        <div class="test col-sm-12" >
-         <%= link_to(image_tag("tv.jpg" , style:"width:70%;"), home_radio_path)  %>
+        
+        <div class="test col-sm-12 col-md-12" >
+             
+         <%= link_to(image_tag("tv.jpg" , style:"width:80%;border-radius:50px; height:190px "), home_radio_path)  %>
+          
          </div>
         </div>
     </div>
 </div>
- 
+<body>
+<div class = "container" align="center" style="margin-left:-10px"  >
 <!-- Secciones -->
-<body >
-            <ul >
-                <div class="row" style = "margin-top: 10%;" >
+
+            <ul>
+                <div class="row" style = "margin-top: 15%;" >
                     <div class="test col-sm-3">
-                        <figure class="testimonial-thumb">
-                            <%= link_to image_tag "f_mes.jpg" , class: "img"%>
+                        <figure >
+                            <%= link_to image_tag "f_mes.jpg", class:"testimonial-thumb"  %>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">
@@ -102,8 +106,8 @@
                         </aside>
                     </div>
                     <div class="test col-sm-3">
-                        <figure class=" testimonial-thumb">
-                            <%= link_to image_tag "mejores_padres.jpg" , class: "img"%>
+                        <figure >
+                            <%= link_to image_tag "mejores_padres.jpg" , class:"testimonial-thumb"%>
                             
                         </figure>
                         <aside class="testimonial-text">
@@ -112,8 +116,8 @@
                         </aside>
                     </div>
                     <div class="test col-sm-3">
-                        <figure class="testimonial-thumb">
-                           <%= link_to image_tag "intimidad.jpg" , class: "img"%>
+                        <figure >
+                           <%= link_to image_tag "intimidad.jpg",  class:"testimonial-thumb" %>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">En Intimidad Con La Pareja</h3>
@@ -121,35 +125,35 @@
                         </aside>
                     </div>
                     <div class="test col-sm-3">
-                        <figure class="testimonial-thumb">
-                           <%= link_to image_tag "diciplina.jpg" , class: "img"%>
+                        <figure >
+                           <%= link_to image_tag "diciplina.jpg" ,  class:"testimonial-thumb" %>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">Como diciplinar a nuestros hijos</h3>
 
                         </aside>
                     </div>
-                    <div class="test  col-sm-3">
-                        <figure class="testimonial-thumb">
-                           <%= link_to image_tag "reflexion.jpg" , class: "img"%>
+                    <div class="test  col-sm-4">
+                        <figure >
+                           <%= link_to image_tag "reflexion.jpg",  class:"testimonial-thumb"%>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">Reflexion para la vida familiar</h3>
 
                         </aside>
                     </div>
-                    <div class="test col-sm-3">
-                        <figure class="testimonial-thumb">
-                           <%= link_to image_tag "familia_y_salud.jpg" , class: "img"%>
+                    <div class="test col-sm-4">
+                        <figure>
+                           <%= link_to image_tag "familia_y_salud.jpg" ,  class:"testimonial-thumb"%>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">La familia y la salud</h3>
 
                         </aside>
                     </div>
-                    <div class="test  col-sm-3">
-                        <figure class="testimonial-thumb">
-                           <%= link_to image_tag "saludSicologica.jpg" , class: "img"%>
+                    <div class="test  col-sm-4">
+                        <figure>
+                           <%= link_to image_tag "saludSicologica.jpg" ,  class:"testimonial-thumb" %>
                         </figure>
                         <aside class="testimonial-text">
                             <h3 class="testimonial-title text-center">La sicologia y la salud</h3>
@@ -160,12 +164,14 @@
             </ul>
       
 
-</body> 
+</div> 
 
 
 <script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent>
 
 </script>
+
+</body>
 
 
 
