--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -1,41 +1,34 @@
 <html>
 <head>
-  <style>
-    .fishes
-    {
-      position: relative;
-      top: 0;
-      left: 0;
-    }
-    .fish
-    {
-      position: absolute;
-      top: -20px;
-      left: 80px;
-    }
-  </style>
     <div class= "d-flex justify-content-center">
     <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
     </div>
     </div>
 </head>
+
 <body>
-  <div style="position: relative; left: 0; top: 0;">
+    <h1 style="font-size:70px">Orientacion Familiar TV y Radio !</h1>
+     
+<div style="position: relative; left: 0; top: 0;">
 <div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
 <div  class="elfsight-app-387ab003-542a-4beb-aaa0-0d17937f228c">
 </div>
-<div class = "fishes" >
-   <%= image_tag("radio.jpg", width: "550", height: "350", alt: "Edit Entry") %> 
+<h3> Escucha nuestra transmision en vivo en los horarios 8-9:00 am y 8-9:00 pm en la honda radial Esperanza de vida 99.1 FM</h3>
+        <div>
+            <%= image_tag("radio.jpg", alt: "Edit Entry", class:" col-sm-6", style:"margin-button:20%") %>
+            <div >
+            <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0" style="position:relative; display:block; margin-top:-225px; border-radius: 20px;"></iframe>
+            </div>
+         </div>
+<div  style ="margin-top:10%; margin-button:20%" align="center" >
+
 </div>
-<div ="fish" style="margin-top: -14%;position: absolute; margin-left: 30%;">
-    <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0"></iframe>
+
 </div>
-  </div>
 </body>
 <script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent style= "z-index: unset;">
-
-
 </script>
+</div>
 </html>
 
