--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1> Articulos de Orientacion Familiar</h1>
+    <div class= "d-flex justify-content-center">
+    <div class=  "social-share-button">
+    <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+    </div>
+    </div>
 <br>
 
 <div class= "row" style= "color:black">
