asset pipleine error fixed

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,7 +78,7 @@
         </div>
     </div>
     <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
-    <%= link_to(image_tag("youtube-icon" , style:"width:10%;border-radius:10%; height:5%;position:relative "), home_radio_path) %>
+    <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:5%;position:relative "), home_radio_path) %>
     <div class="row"  >
         
         <div class="test col-sm-12 col-md-12" >
