--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,24 +73,24 @@
     <div class="row">
         <h3> Escuchanos en los horarios 8-9:00 am y 8-9:00 pm en la honda radial Esperanza de vida 99.1 FM</h3>
         <div class="test col-sm-12" >
-         <%= link_to(image_tag("radio_image.jpg" , style:"width:90%;border-radius:50px; "), home_radio_path)  %>
+         <%= link_to(image_tag("radio_image.jpg" , style:"width:90%;border-radius:30px;height:auto "), home_radio_path)  %>
          </div>
         </div>
     </div>
     <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
-    <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:5%;position:relative "), home_radio_path) %>
+    <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:auto%;position:relative "), home_radio_path) %>
     <div class="row"  >
         
         <div class="test col-sm-12 col-md-12" >
              
-         <%= link_to(image_tag("tv.jpg" , style:"width:80%;border-radius:50px; height:190px "), home_radio_path)  %>
+         <%= link_to(image_tag("tv.jpg" , style:"width:80%;border-radius:50px; height:auto "), home_radio_path)  %>
           
          </div>
         </div>
     </div>
 </div>
 <body>
-<div class = "container" align="center" style="margin-left:-10px"  >
+<div class = "container" align="center"   >
 <!-- Secciones -->
 
             <ul>
