adding podcast funcionality and admin creadential

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,6 +88,20 @@
          </div>
         </div>
     </div>
+        <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
+    <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:auto%;position:relative "), home_radio_path) %>
+    <div class="row"  >
+        
+        <div class="test col-sm-12 col-md-12" >
+             
+         <%= link_to(image_tag("https://cdn.martinbaileyphotography.com/wp-content/uploads/2019/08/MBP_Podcast_20190718_MR27892.jpg" , style:"width:80%;border-radius:50px; height:auto "), uploads_index_path)  %>
+          
+         </div>
+        </div>
+    </div>
+    
+    
+    
 </div>
 <body>
 <div class = "container" align="center"   >
