--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,13 +71,13 @@
 <div class = "container"   style ="margin-top: 10%" align="center" >
       <h2> Ya somos TV y Radio !</h2>
     <div class="row">
-        <h3> Escuchanos en los horarios 8-9:00 am y 8-9:00 pm en la honda radial Esperanza de vida 99.1 FM</h3>
+        <h3> Estamos en vivo en los horarios 8-9:00 am y 8-9:00 pm en la honda radial de Esperanza de vida 99.1 FM</h3>
         <div class="test col-sm-12" >
          <%= link_to(image_tag("radio_image.jpg" , style:"width:90%;border-radius:30px;height:auto "), home_radio_path)  %>
          </div>
         </div>
     </div>
-    <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
+    <h2 style = "margin-top: 5%; font-size:50px"> Ya Somos Orientacion Familiar TV ! Sintonizanos !</h2>
     <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:auto%;position:relative "), home_radio_path) %>
     <div class="row"  >
         
@@ -88,14 +88,10 @@
          </div>
         </div>
     </div>
-        <h2 style = "margin-top: 5%; font-size:50px"> Orientacion Familiar TV !</h2>
-    <%= link_to(image_tag("youtube-icon.png" , style:"width:10%;border-radius:10%; height:auto%;position:relative "), home_radio_path) %>
+        <h2 style = "margin-top: 5%; font-size:50px"> Escucha nuestros Radio Podcasts en cualquier momento y desde cualquier lugar !</h2>
     <div class="row"  >
-        
         <div class="test col-sm-12 col-md-12" >
-             
          <%= link_to(image_tag("https://cdn.martinbaileyphotography.com/wp-content/uploads/2019/08/MBP_Podcast_20190718_MR27892.jpg" , style:"width:80%;border-radius:50px; height:auto "), uploads_index_path)  %>
-          
          </div>
         </div>
     </div>
