--- a/app/views/uploads/new.html.erb
+++ b/app/views/uploads/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Uploads#new</h1>
-<p>Find me in app/views/uploads/new.html.erb</p>
+<h1>Podcasts</h1>
+<p>Grabaciones</p>
 <%= form_tag uploads_path , enctype: 'multipart/form-data' do %>
 	<%= file_field_tag :file  %>
 	<%= submit_tag 'Upload file' %>
@@ -10,5 +10,5 @@
 <% end %>
 
 </br>
-<%= link_to "All Files", uploads_index_path %>
+<%= link_to "Ir a todas las grabaciones y podcats", uploads_index_path %>
 
