--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -7,7 +7,7 @@
 <body>
 </body>
 </html>
-<audio controls="controls">
+<audio controls="controls" autoplay >
 	<source src= '<%= @upload.url %>' type="audio/mpeg">
 	<source src="music.ogg" type="audio/ogg">
 </audio>
