social sharing for podcast update

--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,3 +1,8 @@
+<div class= "d-flex justify-content-center">
+<div class=  "social-share-button">
+<%= rails_social_share_button_tag('Share to Facebook', url: @upload.url  , desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+</div>
+</div>
 <h1>Orientacion Familiar Podcasts</h1>
 <html>
 <head>
