--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-<%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+<%= rails_social_share_button_tag('Share to Facebook', url: home_index_path , desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
 </div>
 <div style = "margin-top = 50px">
