--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Selecciona de la lista para reproducir de Orientacion Familiar</h1>
+<h1>Seleccione de la lista para reproducir </h1>
 <div class="container">
   <div class= "row">
   <% @uploads.each do |upload| %>
@@ -6,7 +6,6 @@
               <%= link_to(image_tag("https://cdn.martinbaileyphotography.com/wp-content/uploads/2019/08/MBP_Podcast_20190718_MR27892.jpg" , style:"border-radius:50px; height:150px; margin-top:20%; position:flex; "), upload)  %>
 	              
               <%= link_to upload.title ,upload, {:style=>'color:#FFFFFF; display: block;font-weight: 895;'} %>
-         
               
     </div>
      <% end %>
