--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  */
  
-@import "bootstrap";
+@import "material";
 @import "rails-social-share-button";
 
 
@@ -25,7 +25,7 @@
 
 .img{
 width: 100%;
-max-height: 440px;
+max-height: 550px;
 } 
 
 
@@ -200,6 +200,9 @@ $size: 50px;
   padding: 70px;
 }
 
+.text-footer{
+  color:white;
+}
 
 
 
