--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,9 +11,9 @@
 <li data-target="#carousel" data-slide-to="2" class="active"></li>
 </ol>
 <div class="carousel-inner" role="listbox">
+
 <div class="carousel-item">
 <a href="https://bootstrapcreative.com/">
-
 <picture>
 <source srcset="https://dummyimage.com/2000x500/007aeb/4196e5" media="(min-width: 1400px)">
 <source srcset="https://dummyimage.com/1400x500/#007aeb/4196e5" media="(min-width: 769px)">
@@ -67,43 +67,44 @@
 <!------ Include the above in your HEAD tag ---------->
 </br>
 
-
 <div class = "container"  align="center" >
-     
+
     <div class="row">
-        <div class = "col-sm-12 col-md-12">
-            <div class="hovereffect">
-                     <%= link_to(image_tag("radio_image.jpg" ,  class:"img-fluid", style:"width:100%"))  %>
-                    <div class="overlay mt-3">
-                       <h2> Radio Monday-Friday 8-9:00 am y 8-9:00 pm</h2>
+
+        <div class = "col-sm-12 col-md-12 mt-5 ">
+            <h2><%= link_to 'Lunes a Viernes de 7:00 am a 8:00am y 7:00 pm a 8:00 pm  !', home_radio_path, style:"color:white" %></h2>
+            <div class="">
+                     <%= link_to(image_tag("radio_image.jpg" ,  class:"img-fluid", style:"width:100%; border-radius: 25px;"), home_radio_path )  %>
+                    <div class="overlay" style = "margin-top:45px">
+                       <h2><%= link_to 'Escuchanos en Orientacion Familiar Radio !', home_radio_path, style:"color:white" %></h2>
                     </div>
             </div>
-            <a class="info" ><%= link_to " Radio Click here !", home_radio_path, style: "font-size:30px; color:white" %> </a>
+            
+        </div>
+
+        <div class = "col-sm-12 col-md-12" style = "margin-top:20%" >
+            <h2><%= link_to 'Sintonizanos en Youtube ! Orientacion Familiar TV !', home_radio_path, style:"color:white" %></h2>
+            <div class="">
+                     <%= link_to(image_tag("tv.png" ,  class:"img-fluid  ", style:"width:100%;   border-radius: 25px;"), home_radio_path )  %>
+                    <div class="overlay" style = "margin-top:45px">
+                       <h2><%= link_to 'Click para ir a Orientacion Familiar TV !', home_radio_path, style:"color:white" %></h2>
+                    </div>
+            </div>
+            
         </div>
          
-        <div class = "col-sm-12 col-md-12  mt-5">
-            <div class="hovereffect">
-                     <%= link_to(image_tag("tv.jpg" ,  class:"img-fluid"))  %>
-                    <div class="overlay mt-3">
-                       <h2> You Tube</h2>
-                       
+        <div class = "col-sm-12 col-md-12 mt-5 ">
+            <h2><%= link_to 'Escucha nuestros audios de Orientacion Familiar !', uploads_index_path, style:"color:white; display:inline-block; margin-top: 15%" %></h2>
+            <div class="">
+                     <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:800px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
+                    <div class="overlay" style = "margin-top:45px;">
+                       <h2><%= link_to 'Click para ir a Orientacion Familiar Audio podcats y Reflexiones', uploads_index_path, style:"color:white" %></h2>
                     </div>
             </div>
-        <a class="info" ><%= link_to "TV Click here !", home_radio_path, style: "font-size:30px; color:white" %></a>
+            
         </div>
         
         
-        <div class = "col-sm-12 col-md-12 mt-5">
-          
-            <div class="hovereffect">
-                     <%= link_to(image_tag("https://cdn.martinbaileyphotography.com/wp-content/uploads/2019/08/MBP_Podcast_20190718_MR27892.jpg" , class:"img-fluid" ), uploads_index_path)  %>
-                    <div class="overlay mt-9">
-                       <h2> Audios y podcasts de Orientacion Familiar</h2>
-                          
-                    </div>
-             </div>
-        <a class="info" ><%= link_to "Audio Podcats Click here !", uploads_index_path, style: "font-size:30px; color:white" %></a>
-        </div>
     
     </div>
     
@@ -112,7 +113,6 @@
 <body>
 <div class = "container" align="center"   >
 <!-- Secciones -->
-
             <ul>
                 <div class="row" style = "margin-top: 15%;" >
                     <div class="test col-sm-3">
