--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,32 +9,32 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 <body >
 <div align= "center">
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light"  >
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"><%= image_tag "banner_burned.png",  class: "icon" %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon">
   </span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" style = "margin-left: 4%;";>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <div class="nav-link" href="#"><%= link_to 'Inicio' , root_path, style:"font-size:1.5em" %><span class="sr-only">(current)</span></div>
+        <div class="nav-link" href="#"><%= link_to 'Inicio' , root_path, style:"font-size:1.3em" %></div>
       </li>
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.5em"%></div>
+        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.3em"%></div>
       </li>
 
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.5em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.3em" %></div>
       </li>
       <li>
-       <div class="nav-link" href="#"> <%= link_to 'Articulos de Interes', posts_path, style:"font-size:1.5em" %></div>
+       <div class="nav-link" href="#"> <%= link_to 'Articulos de Interes', posts_path, style:"font-size:1.3em" %></div>
       </li>
       <li>
        <div class="nav-link" href="#"> <%= link_to 'Cursos', 'https://www.udemy.com/courses/search/?src=ukw&q=padres', style:"font-size:1.5em" %></div>
       </li>
       <li>
-       <div class="nav-link" href="#"> <%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.5em" %></div>
+       <div class="nav-link" href="#"> <%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.3em" %></div>
       </li>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Radio</a>
@@ -42,11 +42,11 @@
         </div>
       </li>
        <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.5em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.3em" %></div>
       </li>
       </li>
        <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'TV y Radio', home_radio_path, style:"font-size:1.5em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'TV y Radio', home_radio_path, style:"font-size:1.3em" %></div>
       </li>
       
       <li class="nav-item ">
@@ -82,58 +82,47 @@
     <% end %>
     <%= yield %>
 </div>
+<div class="container">
 <!-- Footer -->
-  <section id="footer" style = "margin-top:20%;">
+  <section class= "col-xs-12 col-sm-12 col-md-12" id="footer" style = "margin-top:20%;">
     <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left" >
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5>Quick links</h5>
-          <ul class=" quick-links" style= "color:white;">
-            <li ><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Inicio' , root_path, style:"font-size:1.5em" %></a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Mision', home_mision_path, style:"font-size:1.5em"%></a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'TV y Radio', home_radio_path, style:"font-size:1.5em" %></a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+        <div class="col-xs-4 col-sm-4 col-md-4  ">
+          <h5>Visitanos en Youtube</h5>
+          <ul class=" quick-links">
+            <li ><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Inicio' , root_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Mision', home_mision_path , class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'TV y Radio', home_radio_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Audio Podcats', uploads_index_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Quienes Somos', home_somos_path, class:"text-footer" %></a></li>
           </ul>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5>Quick links</h5>
-          <ul class="quick-links" style= "color:white;">
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+        <div class="col-xs-4 col-sm-4 col-md-4">
+          <h5>Revisa nuestra programacion</h5>
+          <ul class=" quick-links">
+            <li ><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Inicio' , root_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Mision', home_mision_path , class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'TV y Radio', home_radio_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Audio Podcats', uploads_index_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Quienes Somos', home_somos_path, class:"text-footer" %></a></li>
           </ul>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5>Quick links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
-            <li><a href="https://wwwe.sunlimetech.com" title="Design and developed by"><i class="fa fa-angle-double-right"></i>Imprint</a></li>
+        <div class="col-xs-4 col-sm-4 col-md-4">
+          <h5>Conocenos !</h5>
+          <ul class=" quick-links">
+            <li ><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Inicio' , root_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Mision', home_mision_path , class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'TV y Radio', home_radio_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Audio Podcats', uploads_index_path, class:"text-footer" %></a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i><%= link_to 'Quienes Somos', home_somos_path, class:"text-footer" %></a></li>
           </ul>
         </div>
-      </div>
+    </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-          <ul class="list-unstyled list-inline social text-center">
-            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
-          </ul>
-        </div>
-        </hr>
-      </div>  
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-          <p><u><a href="https://www.nationaltransaction.com/">Orientacion Familiar es una 
+        <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center">
+          <p><u><a class="text-footer" href="https://www.nationaltransaction.com/">Orientacion Familiar es una 
           institucion registrada bajo la direccion general del Dr. Jose Gil Abreu e incorporada en Hazleton Pensylvannia Estados Unidos. </p>
-          <p class="h6">&copy All rights Reserved.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Orientacion Familiar Una Guia Para El Hogar</a></p>
+          <p class="h6">&copy All rights Reserved.<a class="text-green ml-2 text-footer" href="https://www.sunlimetech.com" target="_blank">Orientacion Familiar Una Guia Para El Hogar</a></p>
         </div>
         </hr>
       </div>  
