--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  */
  
-@import "material";
+@import "bootstrap";
 @import "rails-social-share-button";
 
 
@@ -25,7 +25,7 @@
 
 .img{
 width: 100%;
-max-height: 550px;
+max-height: 450px;
 } 
 
 
@@ -201,7 +201,7 @@ $size: 50px;
 }
 
 .text-footer{
-  color:white;
+  
 }
 
 
