--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,32 +9,36 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 <body >
 <div align= "center">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light " >
+
   <a class="navbar-brand" href="#"><%= image_tag "banner_burned.png",  class: "icon" %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon">
+
   </span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <div class="nav-link" href="#"><%= link_to 'Inicio' , root_path, style:"font-size:1.3em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Inicio', home_index_path, style:"font-size:1.4em" %><span class="sr-only">(current)</span></div>
       </li>
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.3em"%></div>
+        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.4em" %></div>
+      </li>
+       <li class="nav-item">
+        <div class="nav-link" href="#"><%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.4em" %></div>
+      </li>
+      <li class="nav-item">
+        <div class="nav-link" href="#"><%= link_to 'Blogs y Articulos', posts_path, style:"font-size:1.4em" %></div>
       </li>
 
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.3em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.4em" %></div>
       </li>
       <li>
-       <div class="nav-link" href="#"> <%= link_to 'Articulos de Interes', posts_path, style:"font-size:1.3em" %></div>
-      </li>
-      <li>
-       <div class="nav-link" href="#"> <%= link_to 'Cursos', 'https://www.udemy.com/courses/search/?src=ukw&q=padres', style:"font-size:1.5em" %></div>
-      </li>
-      <li>
-       <div class="nav-link" href="#"> <%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.3em" %></div>
+       <div class="nav-link" href="#"> <%= link_to 'Recursos', home_recursos_path, style:"font-size:1.4em" %></div>
       </li>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Radio</a>
@@ -42,36 +46,57 @@
         </div>
       </li>
        <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.3em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.4em" %></div>
       </li>
-      </li>
-       <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'TV y Radio', home_radio_path, style:"font-size:1.3em" %></div>
       </li>
       
-      <li class="nav-item ">
-         <% if user_signed_in? %>
-         <div class="nav-link " href="#"><%= link_to 'Edit profile', edit_user_registration_path, style:"font-size:1.5em" %></div>
-        <li class="nav-item "> <div class="nav-link " href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete, style:"font-size:1.5em"%></div></li>
-        <% if current_user.avatar.attached? %>
-        <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %></li>
-        <% else %>
-          <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %></li>
-        <% end %>
-        <liclass="nav-item "> Logged in as <strong><%= current_user.email %></strong>.</li>
-         <% else %>
-        <div class="nav-link " href="#"><%= link_to "Sign up", new_user_registration_path, style:"font-size:1.5em" %> 
+       <li class="nav-item">
+        <div class="nav-link " href="#"><%= link_to 'TV', home_radio_path, style:"font-size:1.4em" %></div>
       </li>
       <li class="nav-item">
-         <div class="nav-link " href="#"><%= link_to "Login", new_user_session_path, style:"font-size:1.5em"  %></div>
+        <div class="nav-link " href="#"><%= link_to 'Radio', home_radio_path, style:"font-size:1.4em" %></div>
+      </li>
+      <li class="nav-item ">
+         <% if user_signed_in? %>
+         <div class="nav-link " href="#">
+          <%= link_to 'Edit profile', edit_user_registration_path, style:"font-size:1.4em" %>
+           
+         </div>
+        <li class="nav-item "> 
+          <div class="nav-link " href="#">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, style:"font-size:1.4em" %>
+            </div>
+          </li>
+        <% if current_user.avatar.attached? %>
+        <li class="nav-item "> 
+          <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %>
+          </li>
+        <% else %>
+          <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;') %>
+            
+          </li>
         <% end %>
-      </li> 
+        <liclass ="nav-item "> Logged in as <strong><%= current_user.email %></strong>.</li>
+         <% else %>
+        <div class="nav-link " href="#"><%= link_to "Sign up", new_user_registration_path, style:"font-size:1.4em" %> 
+      </li>
+      <li class="nav-item">
+         <div class="nav-link " href="#"><%= link_to "Login", new_user_session_path, style:"font-size:1.4em"  %></div>
+
+        <% end %>
+   
+     
     </ul>
+ 
   </div>
+
 </nav>
+
 </div>
 
+
   </head>
+
   <body>
 <div align= "center" style= "background:rgb(34, 102, 102) none repeat scroll 0% 0%; color:white;">
     <% if notice %>
