--- a/app/views/home/contacto.html.erb
+++ b/app/views/home/contacto.html.erb
@@ -1,4 +1,4 @@
-<h1>Contactos</h1>
+<h1>Contacto</h1>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
