--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -32,3 +32,9 @@
 </div>
 </html>
 
+
+<script>
+setTimeout(function(){
+youtube_frame.children[1].childNodes[3].childNodes[3].style.zIndex = 0;
+}, 5000);
+</script>
